--- a/backend/uploads/game.html
+++ b/backend/uploads/game.html
@@ -15,6 +15,14 @@
         renderer='antialias: true; alpha: true'>
         <a-camera gps-new-camera='gpsMinDistance: 1'></a-camera>
     </a-scene>
+    <div>
+    <label style="border-radius:15px; padding:10px; background: rgb(19, 112, 92); width: 80px; height: 80px; position: absolute; z-index: 10;bottom:20px; right:20px;">
+        <svg width=80px  height=80px xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" strokeWidth={2} stroke="currentColor">
+          <path stroke="white" strokeLinecap="round" strokeLinejoin="round" d="M6.827 6.175A2.31 2.31 0 015.186 7.23c-.38.054-.757.112-1.134.175C2.999 7.58 2.25 8.507 2.25 9.574V18a2.25 2.25 0 002.25 2.25h15A2.25 2.25 0 0021.75 18V9.574c0-1.067-.75-1.994-1.802-2.169a47.865 47.865 0 00-1.134-.175 2.31 2.31 0 01-1.64-1.055l-.822-1.316a2.192 2.192 0 00-1.736-1.039 48.774 48.774 0 00-5.232 0 2.192 2.192 0 00-1.736 1.039l-.821 1.316z" />
+          <path stroke="white" strokeLinecap="round" strokeLinejoin="round" d="M16.5 12.75a4.5 4.5 0 11-9 0 4.5 4.5 0 019 0zM18.75 10.5h.008v.008h-.008V10.5z" />
+        </svg>
+    </label><input onChange={uploadReport}id="file-upload-garbage" className="opacity-0" type="file" accept="image/*" capture="camera" />
+</div>
 </body>
 
 <script>
@@ -36,6 +44,7 @@
         let testEntityAdded = false;
 
         const el = document.querySelector("[gps-new-camera]");
+        //el.setAttribute('position', {x:0, y:0, z:100000000000000});
 
         el.addEventListener("gps-camera-update-position", e => {
             if (!testEntityAdded) {
@@ -48,19 +57,20 @@
                         // Add a box to the north of the initial GPS position
                         // const entity = document.createElement("a-box");
                         const entity = document.createElement('a-entity');
-                        entity.setAttribute('gltf-model', './assets/magnemite/scene.gltf');
-                        //entity.setAttribute('rotation', '0 180 0');
+                        entity.setAttribute('gltf-model', './assets/dragon/dragon2.gltf');
+                        entity.setAttribute('rotation', '-20 0 0');
                         entity.setAttribute('animation-mixer', '');
                         entity.setAttribute("scale", {
-                            x: 10,
-                            y: 10,
-                            z: 10
+                            x: 1,
+                            y: 1,
+                            z: 1
                         });
                         entity.setAttribute('material', { color: 'red' });
                         console.log(`${data} New entity at: lon ${target_pos.target_lon} lat ${target_pos.target_lat}`);
+                        //entity.setAttribute('position', {x:0, y:0, z:-10000})
                         entity.setAttribute('gps-new-entity-place', {
                             latitude: target_pos.target_lat,
-                            longitude: target_pos.target_lon
+                            longitude: target_pos.target_lon,
                         });
                         document.querySelector("a-scene").appendChild(entity);
                     }).catch(function (err) {
